# QualityControlPlatformTest

./: .gitignore  README.md  pyproject.toml
backend/: settings.py  urls.py
dashboard/: models.py  serializers.py  urls.py  views.py
products/: models.py  serializers.py  urls.py  views.py
quality/: models.py  permissions.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
